--- a/environment.yml
+++ b/environment.yml
@@ -1,3 +1,4 @@
+name: csw
 channels:
   - conda-forge
   - defaults
@@ -18,4 +19,15 @@ dependencies:
   - wheel=0.36.2=pyhd3deb0d_0
   - xz=5.2.5=haf1e3a3_1
   - zlib=1.2.11=h7795811_1010
+  - pip:
+    - chardet==4.0.0
+    - idna==2.10
+    - lxml==4.6.2
+    - numpy==1.20.1
+    - pandas==1.2.3
+    - python-dateutil==2.8.1
+    - pytz==2021.1
+    - requests==2.25.1
+    - six==1.15.0
+    - urllib3==1.26.4
 prefix: /Users/alegresor/miniconda3/envs/csw
