--- a/environment.yml
+++ b/environment.yml
@@ -6,11 +6,11 @@ dependencies:
   - ca-certificates=2020.12.5=h033912b_0
   - certifi=2020.12.5=py38h50d1736_1
   - libcxx=11.1.0=habf9029_0
-  - libffi=3.2.1=hb1e8313_1007
+  - libffi=3.3=h046ec9c_2
   - ncurses=6.2=h2e338ed_4
   - openssl=1.1.1j=hbcf498f_0
   - pip=21.0.1=pyhd8ed1ab_0
-  - python=3.8.0=hd366da7_5
+  - python=3.8.8=h4e93d89_0_cpython
   - python_abi=3.8=1_cp38
   - readline=8.0=h0678c8f_2
   - setuptools=49.6.0=py38h50d1736_3
@@ -20,14 +20,25 @@ dependencies:
   - xz=5.2.5=haf1e3a3_1
   - zlib=1.2.11=h7795811_1010
   - pip:
+    - cachetools==4.2.1
     - chardet==4.0.0
+    - google-auth==1.28.0
+    - google-auth-oauthlib==0.4.3
+    - gspread==3.7.0
+    - httplib2==0.19.0
     - idna==2.10
     - lxml==4.6.2
     - numpy==1.20.1
+    - oauth2client==4.1.3
+    - oauthlib==3.1.0
     - pandas==1.2.3
+    - pyasn1==0.4.8
+    - pyasn1-modules==0.2.8
+    - pyparsing==2.4.7
     - python-dateutil==2.8.1
     - pytz==2021.1
     - requests==2.25.1
+    - requests-oauthlib==1.3.0
+    - rsa==4.7.2
     - six==1.15.0
     - urllib3==1.26.4
-prefix: /Users/alegresor/miniconda3/envs/csw
